# TFT_KEDRO

./: .gitignore  README.md  constraints.txt  pyproject.toml  requirements.txt
.viz/: stats.json
conf/base/: catalog.yml  parameters.yml
data/01_raw/: challenger_stats.pkl  grandmaster_stats.pkl  platinum_stats.pkl
docs/source/: .gitkeep
notebooks/: 01_business_understanding.ipynb  02_data_cleaning.ipynb  03_feature_engineering.ipynb
src/tft_kedro/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/tft_kedro/pipelines/business_understanding/: nodes.py  pipeline.py  target_definition.py
src/tft_kedro/pipelines/data_cleaning/: nodes.py  pipeline.py
src/tft_kedro/pipelines/data_science/: __init__.py  nodes.py  pipeline.py
src/tft_kedro/pipelines/feature_engineering/: nodes.py  pipeline.py
src/tft_kedro/pipelines/reporting/: __init__.py  nodes.py  pipeline.py
